Add several junit integration tests for the EventsGenerator, #130.